# relyonai

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test.ipynb  test.py
aiknows/: __init__.py  ai.py  config.py  exceptions.py  explain.py  gpt.py  llm.py  runtime.py  utils.py
aiknows/prompt/: NEW_SCHEMA.md  README.md  SCHEMA.md  explain.ipynb  prompt.json  prompt.py  system.txt
aiknows/prompt/examples/: const.ipynb  consts.ipynb  env.ipynb  error_fixing.ipynb  errors.ipynb  examples.json  exploration.ipynb  file_arg.ipynb  file_const.ipynb  file_noarg.ipynb  filename.txt  files.ipynb  format.ipynb  funcs1.ipynb  funcs2.ipynb  funcs3.ipynb  function.ipynb  gpt.ipynb  imports.ipynb  lambdas.ipynb  make_json.py  make_prompt.py  modules.ipynb  package.ipynb  plt.ipynb  reuse.ipynb  run_all.sh  session.ipynb  sum.ipynb  sum_x.ipynb  sum_xy.ipynb  sum_y.ipynb  sums.ipynb  task_error.ipynb  task_error_cause.ipynb  task_errors.ipynb  template.ipynb
aiknows/prompt/system/: default.md  gpt4-refined.md  gpt4.md  simpler.md  simpler2.md
askai/: __init__.py  ai.py  config.py  exceptions.py  explain.py  gpt.py
askai/prompt/: README.md  SCHEMA.md  __init__.py  examples.json  explain.ipynb  filename.txt  prompt.py  system.txt  system0.txt  test.ipynb
askai/prompt/examples/: README.md  const.ipynb  error_fixing.ipynb  examples.json  file_arg.ipynb  file_noarg.ipynb  filename.txt  gpt.ipynb  make_json.py  package.ipynb  plt.ipynb  run_all.sh  sum.ipynb  sum_x.ipynb  sum_xy.ipynb  sum_y.ipynb  task_error.ipynb  task_error_cause.ipynb  template.ipynb
nbs/: test.ipynb
relyonai/: __init__.py  _config.py  ai.py  config.py  explain.py  llm.py  runtime.py  utils.py
relyonai/prompt/: __init__.py  prompt.py
relyonai/prompt/examples/: consts.ipynb  env.ipynb  error_fixing.ipynb  errors.ipynb  exploration.ipynb  files.ipynb  format.ipynb  funcs1.ipynb  funcs2.ipynb  funcs3.ipynb  gpt.ipynb  imports.ipynb  lambdas.ipynb  make_prompt.py  other.txt  plt.ipynb  session.ipynb  template.ipynb
relyonai/prompt/schemas/: NEW_SCHEMA.md  SCHEMA.md  SIMPLER_SCHEMA.md
tests/: cities.csv  conftest.py  test_ai.py  test_gpt.py
tests/ai/multi/: test_ai.py
tests/ai/single/: test_args.py  test_consts.py  test_files.py  test_funcs.py  test_igpt.py  test_imports.py
tests/data/: cities.csv
