# based on https://github.com/psf/black/blob/main/pyproject.toml

[build-system]
requires = ["hatchling>=1.14.1"]
build-backend = "hatchling.build"

[project]
name = "aiknows"
version = "0.1.0"
# version parser expected this to be of form ">={python_version}"
requires-python = ">=3.8"
dependencies = [
    "openai==0.27.6",
    "joblib==1.2.0",
]

[project.optional-dependencies]
prompt = [
    "jupyter==1.0.0",
]
dev = [
    # format
    "black==23.3.0",
    "isort==5.12.0",
    # lint
    "flake8==6.0.0",
    "Flake8-pyproject==1.2.3",  # for [tool.flake8] section later
    # test
    "pytest==7.3.1",
    "pytest-sugar==0.9.7",
    "pytest-xdist==3.2.1",
    "tox==4.5.1",
    # external packages
    "pandas==2.0.1",
]
all = ["aiknows[prompt]", "aiknows[dev]"]

[tool.black]
line-length = 99
# https://stackoverflow.com/questions/56011/single-quotes-vs-double-quotes-in-python/56190#56190
skip-string-normalization = true

[tool.isort]
profile = "black"
# line-length is not supported
line_length = 99

[tool.flake8]
max-line-length = 99

[tool.pytest.ini_options]
# with caching, single process is faster
addopts="-n 4"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = python3{6,7}, py3{8,9,10,11}

[testenv]
extras = dev
commands = pytest
pass_env = OPENAI_API_KEY
"""
